[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["praveeenvijayan <textpraveennair@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_lms"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
